# aiida-chemshell

./: .gitignore  .gitlab-ci.yml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci-release.yml  ci-testing.yml
docs/source/: aiida_chemshell.rst  conf.py  examples.rst  index.rst  introduction.rst  modules.rst
src/aiida_chemshell/: __init__.py  calculations.py  parsers.py  pasrsers.py  periodic_table.py  units.py  utils.py
src/aiida_chemshell/calculations/: base.py  file_conversion.py  splt_trajectory.py  utils.py
src/aiida_chemshell/parsers/: base.py  file_conversion.py  split_trajectory.py
src/aiida_chemshell/workflows/: batch_calculation.py  clf_ultra.py  isolated_atoms.py  optimisation.py
tests/: README.md  conftest.py  test_batch_workcahin.py  test_calculations.py  test_error_codes.py  test_inputs.py  test_isolated_atoms_workchain.py  test_workflows.py  tmp.txt
tests/data/: butanol.cjson  butanol.ff  h2o_dimer.cjson  h2o_dimer.ff  h2o_dimer_gulp.ff  trajectory.xyz  water.cjson
utils/: version_check.sh
